Fixed comment options overflow bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -581,10 +581,10 @@ p {
 	background: white;
 	position: relative;
 	padding-top: 10px;
-	padding-bottom: 10px;
-  min-height: 129px;
-  max-width: 1078px;
+	padding-bottom: 0px;
+  min-height: 120px;
   max-height: 1500px;
+  overflow: hidden;
 }
 
 .commentContainer:hover .options {
@@ -679,6 +679,7 @@ p {
 
 .show_replies {
 	display: none;
+  margin-top: 50px !important;
 }
 
 .replies_link {
@@ -699,6 +700,7 @@ p {
 	border-left: 5px solid #3399cc;
 	padding: 5px 5px 5px 10px;
 	margin: 15px;
+
 	margin-left: 5%;
 }
 
@@ -1097,7 +1099,7 @@ p {
 }
 
 .notification_active {
-  background: #f2efe4;
+  background: #f5f5dc;
 }
 
 #notification_alert {
@@ -1116,6 +1118,18 @@ p {
   margin: 0px;
 }
 
-#notification_wrapper {
+#messages_alert {
+  position: absolute;
+  right: 37px;
+  top: 6px;
+  background: #d5a34a;
+  padding: 0px 5px 0px 5px;
+  height: 23px;
+  border-radius: 3px;
+}
 
+#messages_alert_text {
+  color: white;
+  padding: 0px;
+  margin: 0px;
 }
